--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "axios": "^1.4.0",
+    "next": "^15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "vite-plugin-vue-devtools": "^7.7.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
