--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@next/font": "^14.2.15",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.4.0",
+    "chart.js": "^4.5.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite-plugin-vue-devtools": "^7.7.6",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
