--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.4.0",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
