--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/vue": "^2.0.18",
     "@next/font": "^14.2.15",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/three": "^0.178.1",
     "axios": "^1.4.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "three": "^0.178.0",
     "vite-plugin-vue-devtools": "^7.7.6",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.2",
